from dataclasses import dataclass, field
from enum import Enum
from typing import Optional
from core.models.geometry import Position, Edge, Pose
from core.models.station import Station
from core.models.edge_action import EdgeAction

class ConstructionMode(Enum):
    RAIL = 1
    SIGNAL = 2
    STATION = 3
    PLATFORM = 4
    BULLDOZE = 5
    
@dataclass
class ConstructionPreview:
    edges: frozenset[Edge] = field(default_factory=frozenset)
    nodes: frozenset[Position] = field(default_factory=frozenset)
    edge_action: EdgeAction = EdgeAction.NORMAL
    
    def clear(self) -> None:
        self.edges = frozenset()
        self.nodes = frozenset()
        self.edge_action = EdgeAction.NORMAL
    
    
@dataclass
class ConstructionState:
    """Manages the current construction mode and associated state."""
    mode: ConstructionMode = ConstructionMode.RAIL
    construction_anchor: Pose | None = None
    track_speed: int = 120
    track_length: int = 50
    moving_station: Optional[Station] = None
    preview: ConstructionPreview = field(default_factory=ConstructionPreview)
    platform_waiting_for_station: bool = False
    
    def switch_mode(self, new_mode: ConstructionMode) -> None:
        """Switch to a new construction mode, clearing previous state."""
        if new_mode == self.mode:
            return
        
        self.mode = new_mode
        self.construction_anchor = None
        self.moving_station = None
        self.preview.clear()
        self.platform_waiting_for_station = False
        
    def is_edge_in_preview(self, edge: Edge) -> bool:
        """Check if an edge (in either direction) is in the preview set."""
        return edge in self.preview.edges
    
    def is_bulldoze_preview_node(self, pos: Position) -> bool:
        """Check if a position is marked for bulldozing."""
        return self.mode is ConstructionMode.BULLDOZE and pos in self.preview.nodes

    def is_station_being_moved(self, station: Station) -> bool:
        """Check if a specific station is currently being moved."""
        return self.moving_station == station
    
    def reset(self) -> None:
        """Reset the construction state to its initial values."""
        self.mode = ConstructionMode.RAIL
        self.construction_anchor = None
        self.track_speed = 120
        self.moving_station = None
        self.preview.clear()
        self.platform_waiting_for_station = False