from typing import Callable
import pygame
from core.config.paths import ICON_PATHS
from shared.models.app_state import AppState
from core.models.railway.railway_system import RailwaySystem
from core.graphics.icon_loader import IconLoader
from core.models.geometry.position import Position
from core.config.color import Color
from core.config.config import Config
from shared.ui.models.shortcut_ui_component import ShortcutUIComponent
from shared.ui.models.button import Button
from core.models.event import Event


class OpenButton(ShortcutUIComponent, Button):
    def __init__(self, screen: pygame.Surface, on_load: Callable):
        w, h = screen.get_size()
        rect = pygame.Rect(10, h - 3*(Config.BUTTON_SIZE + 10), Config.BUTTON_SIZE, Config.BUTTON_SIZE)
        super().__init__(rect, screen)
        self._on_load = on_load
        self._icon = IconLoader().get_icon(ICON_PATHS["OPEN"], Config.BUTTON_SIZE)
        self._shortcuts = {
            (pygame.K_o, True): on_load
        }

    def _on_click(self, event: Event) -> None:
        if event.is_left_click:
            self._on_load()

    def render(self, screen_pos: Position) -> None:
        bg_color = Color.DARKGREY if self.contains(screen_pos) else Color.BLACK
        pygame.draw.rect(self._screen, bg_color, self._rect, border_radius=10)
        icon_rect = self._icon.get_rect(center=self._rect.center)
        self._screen.blit(self._icon, icon_rect)
        pygame.draw.rect(self._screen, Color.WHITE, self._rect, 2, border_radius=10)
