import pygame
from core.models.railway.railway_system import RailwaySystem
from core.graphics.icon_loader import IconLoader
from core.models.geometry.position import Position
from core.config.color import Color
from core.config.paths import ICON_PATHS
from core.config.config import Config
from modules.timetable.timetable_window import TimeTableWindow
from core.models.event import Event
from shared.ui.models.shortcut_ui_component import ShortcutUIComponent
from shared.ui.models.button import Button


class TimetableButton(Button, ShortcutUIComponent):
    def __init__(self, screen: pygame.Surface, railway: RailwaySystem):
        self._railway = railway

        self._icon = IconLoader().get_icon(ICON_PATHS["timetable"], Config.BUTTON_SIZE)
        rect = pygame.Rect(Config.BUTTON_SIZE//5, 300, Config.BUTTON_SIZE, Config.BUTTON_SIZE)
        super().__init__(rect, screen)
        self.timetable_window = None  # Store window reference
        self._shortcuts = {
            (pygame.K_r, False): self.open_timetable_window
        }

    def _on_click(self, event: Event) -> bool:
        if event.is_left_click:
            self.open_timetable_window()
    
    def open_timetable_window(self):
        if self.timetable_window is None:
            self.timetable_window = TimeTableWindow(self._railway)
            self.timetable_window.window_closed.connect(self._on_timetable_window_closed)
            self.timetable_window.show()
        else:
            if self.timetable_window.isMinimized():
                self.timetable_window.showNormal()
            self.timetable_window.raise_()
            self.timetable_window.activateWindow()
    
    def _on_timetable_window_closed(self, *args, **kwargs):
            self.timetable_window = None

    def render(self, screen_pos: Position) -> None:
        bg_color = Color.DARKGREY if self.contains(screen_pos) else Color.BLACK
        pygame.draw.rect(self._screen, bg_color, self._rect, border_radius=10)
        icon_rect = self._icon.get_rect(center=self._rect.center)
        self._screen.blit(self._icon, icon_rect)
        pygame.draw.rect(self._screen, Color.WHITE, self._rect, 2, border_radius=10)